# DES_04.PDC

./: README.md
AmbientLight_page/: CMakeLists.txt
AmbientLight_page/src/qml/: Lightpage.qml
Media_page/: CMakeLists.txt
Media_page/src/qml/: Musicpage.qml
Navigation_page/: CMakeLists.txt
Navigation_page/src/: main.cpp
Navigation_page/src/qml/: Navipage.qml  ValueSource.qml
PDC_page/: CMakeLists.txt
Setting_page/: CMakeLists.txt
ivi-compositor/: CMakeLists.txt
ivi-compositor/src/: ivi-compositor.qrc  main.cpp  main.qml
ivi-compositor/src/qml/: ValueSource.qml  main.qml
